Navbar collapse formatting - center and margin correction

--- a/MK TIME/styles/style-01.css
+++ b/MK TIME/styles/style-01.css
@@ -82,7 +82,7 @@ html {
 }
 
 .searchbar{
-  
+  width: 50%;
   margin-top: auto;
   margin-bottom: auto;
   font-family: Arial, Helvetica, sans-serif
